--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "18.3.1",
     "next": "15.0.1",
-    "next-auth": "^5.0.0-beta.22",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "next-auth": "^4.24.5",
+    "react-dom": "18.3.1",
     "sass": "^1.79.4",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0-rc.2",
@@ -25,7 +25,7 @@
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react": "18.3.12",
     "daisyui": "^4.12.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
@@ -33,8 +33,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsconfig-paths": "^4.2.0"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1"
   }
 }
