--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "next": "15.0.1",
-    "next-auth": "^4.24.5",
-    "react-dom": "18.3.1",
-    "sass": "^1.79.4",
-    "styled-components": "^6.1.13",
-    "zustand": "^5.0.0-rc.2",
     "@heroicons/react": "^2.1.5",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "js-cookie": "^3.0.5",
+    "next": "15.0.1",
+    "next-auth": "^4.24.5",
+    "react": "18.3.1",
     "react-calendar-heatmap": "^1.9.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "sass": "^1.79.4",
+    "styled-components": "^6.1.13",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
