--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@iconify-json/noto": "^1.2.1",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "js-cookie": "^3.0.5",
@@ -26,6 +27,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@iconify/tailwind": "^1.1.3",
     "@types/react": "18.3.12",
     "daisyui": "^4.12.13",
     "eslint": "^8",
