--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ lerna-debug.log*
 *.wav
 *.aiff
 *.mp3
-!fire free 9.0.mp3
+!fire free 11.0.mp3
 *.flac
 *.aup3
+*.aup3-shm
+*.aup3-wal
 
 node_modules
 dist
