--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@iconify-json/noto": "^1.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.475.0",
     "next": "15.0.1",
     "next-auth": "^4.24.5",
     "react": "18.3.1",
@@ -24,6 +31,8 @@
     "react-icons": "^5.3.0",
     "sass": "^1.79.4",
     "styled-components": "^6.1.13",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
